http-route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eg-grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: eg-public
    namespace: gateway
    sectionName: http
  hostnames:
  - "grafana.agf.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
