http-route-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eg-prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: eg-public
    namespace: gateway
    sectionName: http
  hostnames:
  - "prometheus.agf.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
